<resources>
    <string name="app_name">Kaboom</string>
    <string name="Liakozzz">LIAKOZZZ</string>
    <string name="Xristou">ΧΡΗΣΤΟΥ</string>
    <string name="Nikolas">ΝΙΚΟΛΑΣ</string>
    <string name="UUUUU">UUUUU</string>
    <string name="MonosSou">ΜΟΝΟΣ ΣΟΥ</string>
    <string name="KalaEsu">ΚΑΛΑ ΕΣΥ</string>
    <string name="Ebebaia">Ε ΒΕΒΑΙΑ</string>
    <string name="Boulwne">ΒΟΥΛΩΝΕ</string>
    <string name="ReAliti">ΡΕ ΑΛΗΤΗ</string>
    <string name="KaliEinai">ΚΑΛΗ ΕΙΝΑΙ</string>
    <string name="Karbela">ΚΑΡΒΕΛΑ</string>
</resources>