<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewDisplayName"
        android:layout_width="149dp"
        android:layout_height="57dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonLiakozzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoLiakozzzSoundBoard"
        android:text="@string/Liakozzz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonXristou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayName"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonXristou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Xristou"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayName" />

    <Button
        android:id="@+id/buttonNikolas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nikolas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonXristou"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayName" />
</androidx.constraintlayout.widget.ConstraintLayout>